# smart-apply

./: .env.example  .gitignore  Dockerfile  README.md  applicant.py  apply_methods.py  captcha_solver.py  cloudflare_challenge.py  config.yaml.example  docker-compose.yml  gmail.py  llm.py  main.py  page_parsers.py  pyproject.toml  recaptcha.py  requirements.txt  result.py  test_captcha_solver.py  test_cloudflare_challenge.py  test_page_parsers.py  test_recaptcha.py
.github/: copilot-instructions.md
smart_apply/: apply_methods.py  browser_utils.py  config.py  gmail.py  llm.py  logger.py  main.py  page_parsers.py  result.py
smart_apply/captcha_solvers/: cloudflare_challenge.py  recaptcha.py
src/: applicant.py  apply_methods.py  config.py  gmail.py  llm.py  main.py  page_parsers.py  playwright_utils.py  result.py  test_page_parsers.py
src/captcha_solvers/: cloudflare_challenge.py  recaptcha.py  test_cloudflare_challenge.py  test_recaptcha.py
tests/: conftest.py  test_cloudflare_challenge.py  test_page_parsers.py  test_recaptcha.py
